--- a/calculator.html
+++ b/calculator.html
@@ -99,7 +99,7 @@
 
 <!-- Background Video -->
 <video autoplay muted loop>
-    <source src="Calculator Background.mp4" type="video/mp4">
+    <source src="videos/calculator-background.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
 </video>
 
